Short hop/Vault implemented

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.GroupName,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
-CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
+CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 Enemy_AI_ABP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
@@ -1548,7 +1548,6 @@ K2Node_Timeline.GraphNodeDetail=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Characters/Player/Animations/Neo_Blueprint.Neo_Blueprint
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1618,8 +1617,8 @@ BillboardComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
 BoneProxy="\"Object\" "
 AnimSequence="\"Object\" \"Object.Animation.ResampledAnimationTrackData\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[0]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[1]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[2]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[3]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[4]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[5]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[6]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[7]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[8]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[9]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[10]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[11]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[12]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[13]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[14]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[15]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[16]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[17]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[18]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[19]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[20]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[21]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[22]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[23]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[24]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[25]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[26]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[27]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[28]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[29]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[30]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[31]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[32]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[33]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[34]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[35]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[36]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[37]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[38]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[39]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[40]\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-AnimSequenceBase="\"Object\" \"Object.Animation.ResampledAnimationTrackData\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[0]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[1]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[2]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[3]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[4]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[5]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[6]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[7]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[8]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[9]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[10]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[11]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[12]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[13]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[14]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[15]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[16]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[17]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[18]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[19]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[20]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[21]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[22]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[23]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[24]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[25]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[26]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[27]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[28]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[29]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[30]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[31]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[32]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[33]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[34]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[35]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[36]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[37]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[38]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[39]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[40]\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-AnimationAsset="\"Object\" \"Object.Animation.ResampledAnimationTrackData\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[0]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[1]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[2]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[3]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[4]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[5]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[6]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[7]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[8]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[9]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[10]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[11]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[12]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[13]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[14]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[15]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[16]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[17]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[18]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[19]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[20]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[21]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[22]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[23]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[24]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[25]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[26]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[27]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[28]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[29]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[30]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[31]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[32]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[33]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[34]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[35]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[36]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[37]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[38]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[39]\" \"Object.Animation.ResampledAnimationTrackData.ResampledAnimationTrackData[40]\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+AnimSequenceBase="\"Object\" \"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
+AnimationAsset="\"Object\" \"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
 Neo_Blueprint_C="\"Object\" "
 AnimInstance="\"Object\" "
 AnimGraphNode_StateMachine="\"Object\" "
@@ -1641,9 +1640,9 @@ K2Node_InputKey="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object\" \"Object.CharacterMovement\" "
-Character="\"Object\" \"Object.CharacterMovement\" "
-Pawn="\"Object\" \"Object.CharacterMovement\" "
+BP_ThirdPersonCharacter_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Enemy_ABP_C="\"Object\" "
@@ -2754,7 +2753,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3005,26 +3004,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/Characters/Player/Animations/Motions/Sprinting_Forward_Roll
-MRUItem3=/Game/Characters/Player/Animations/Motions/Running_Slide__3_
-MRUItem4=/Game/Characters/Player/Animations/Motions/Running_Slide__3__Montage
-MRUItem5=/Game/Characters/Player/Animations/Motions/Running_Slide__1__mixamo_com
-MRUItem6=/Game/Characters/Player/Animations/Motions/Neo_Slide
-MRUItem7=/Game/Characters/Player/Animations/Motions/Neo_Slide_Montage
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem9=/Game/door2_BP
-MRUItem10=/Game/Door_BP
-MRUItem11=/Game/trip_bp
-MRUItem12=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem13=/Game/Characters/Enemy/Test/Test_enemy
-MRUItem14=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
-MRUItem15=/Game/Characters/Player/Animations/Motions/Brutal_Assassination_Player
-MRUItem16=/Game/Characters/Player/Animations/Motions/Takedown2_Player
-MRUItem17=/Game/Characters/Player/Animations/Motions/Rockin__Shackle_A
-MRUItem18=/Game/Characters/Player/Animations/Motions/Takedown_A3
-MRUItem19=/Game/Characters/Player/Animations/Motions/Takedown_A2
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip_Montage
+MRUItem2=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip
+MRUItem3=/Game/Characters/Player/Animations/Motions/Sprinting_Forward_Roll
+MRUItem4=/Game/Characters/Player/Animations/Motions/Neo_Vaulting
+MRUItem5=/Game/Characters/Player/Animations/Motions/Roll_Montage
+MRUItem6=/Game/Characters/Player/Animations/Motions/Neo_Vault
+MRUItem7=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem8=/Game/Characters/Player/Animations/Motions/Running_Slide__3_
+MRUItem9=/Game/Characters/Player/Animations/Motions/Running_Slide__3__Montage
+MRUItem10=/Game/Characters/Player/Animations/Motions/Running_Slide__1__mixamo_com
+MRUItem11=/Game/Characters/Player/Animations/Motions/Neo_Slide
+MRUItem12=/Game/Characters/Player/Animations/Motions/Neo_Slide_Montage
+MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem14=/Game/door2_BP
+MRUItem15=/Game/Door_BP
+MRUItem16=/Game/trip_bp
+MRUItem17=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem18=/Game/Characters/Enemy/Test/Test_enemy
+MRUItem19=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -3082,6 +3081,7 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Door_BP.Door_BP=1
 /Game/door2_BP.door2_BP=1
 /Game/Characters/Player/Animations/Motions/Running_Slide__3_.Running_Slide__3_=1
+/Game/Characters/Player/Animations/Motions/Neo_Vault.Neo_Vault=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
