--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -141,7 +141,7 @@ MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 BP_Enemy_AI_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
-StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
+StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,
@@ -237,8 +237,12 @@ Test_enemy_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_Va
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 door2_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 BP_ThirdPersonGameMode_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
-SceneComponent=
+SceneComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
+Ziplineactor_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
+CableComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
+StaticMeshSocket=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
+SplineMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -1544,10 +1548,81 @@ door2_BP_C.WorldPartition=True
 door2_BP_C.Events=True
 door2_BP_C.TransformCommon=True
 K2Node_Timeline.GraphNodeDetail=True
+Ziplineactor_C.Tick=True
+Ziplineactor_C.Replication=True
+Ziplineactor_C.Rendering=True
+Ziplineactor_C.Collision=True
+Ziplineactor_C.Actor=True
+Ziplineactor_C.Input=True
+Ziplineactor_C.HLOD=True
+Ziplineactor_C.WorldPartition=True
+Ziplineactor_C.Events=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+Ziplineactor_C.TransformCommon=True
+Ziplineactor_C.Default=True
+SplineComponent.Variable=True
+SplineComponent.TransformCommon=True
+SplineComponent.Sockets=True
+SplineComponent.Selected Points=True
+SplineComponent.Spline=True
+SplineComponent.Editor=True
+SplineComponent.ComponentTick=True
+SplineComponent.HLOD=True
+SplineComponent.Navigation=True
+SplineComponent.Tags=True
+SplineComponent.ComponentReplication=True
+SplineComponent.Activation=True
+SplineComponent.Cooking=True
+SplineComponent.Events=True
+CableComponent.Variable=True
+CableComponent.TransformCommon=True
+CableComponent.Sockets=True
+CableComponent.Materials=True
+CableComponent.Cable=True
+CableComponent.Cable Forces=True
+CableComponent.Cable Rendering=True
+CableComponent.ComponentTick=True
+CableComponent.Collision=True
+CableComponent.HLOD=True
+CableComponent.Lighting=True
+CableComponent.Rendering=True
+CableComponent.Navigation=True
+CableComponent.VirtualTexture=True
+CableComponent.Tags=True
+CableComponent.ComponentReplication=True
+CableComponent.Cooking=True
+CableComponent.Events=True
+StaticMeshSocket.StaticMeshSocket=True
+SplineMeshComponent.TransformCommon=True
+SplineMeshComponent.StaticMesh=True
+SplineMeshComponent.SplineMesh=True
+SplineMeshComponent.Spline=True
+SplineMeshComponent.Collision=True
+SplineMeshComponent.Lighting=True
+SplineMeshComponent.Rendering=True
+SplineMeshComponent.HLOD=True
+SplineMeshComponent.Navigation=True
+SplineMeshComponent.VirtualTexture=True
+SplineMeshComponent.Tags=True
+SplineMeshComponent.ComponentReplication=True
+SplineMeshComponent.Variable=True
+SplineMeshComponent.Cooking=True
+SplineMeshComponent.Materials=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/Ziplineactor.Ziplineactor
+OpenAssetsAtExit=/Engine/EditorBlueprintResources/StandardMacros.StandardMacros
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1806,6 +1881,11 @@ GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
+StaticMesh="\"Object\" "
+SplineComponent="\"Object\" "
+CableComponent="\"Object\" "
+StaticMeshSocket="\"Object\" "
+SplineMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2753,7 +2833,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2824,6 +2904,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Ziplineactor.Ziplineactor;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/door2_BP.door2_BP;
 RecentlyPlaced=/Game/Characters/Enemy/Test/Test_enemy.Test_enemy;
@@ -2843,7 +2924,6 @@ RecentlyPlaced=/Game/blade_BP.blade_BP;
 RecentlyPlaced=/Game/Obstacle_Blueprint.Obstacle_Blueprint;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Blueprints/Launchpad_2.Launchpad_2;
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3004,26 +3084,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip_Montage
-MRUItem2=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip
-MRUItem3=/Game/Characters/Player/Animations/Motions/Sprinting_Forward_Roll
-MRUItem4=/Game/Characters/Player/Animations/Motions/Neo_Vaulting
-MRUItem5=/Game/Characters/Player/Animations/Motions/Roll_Montage
-MRUItem6=/Game/Characters/Player/Animations/Motions/Neo_Vault
-MRUItem7=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem8=/Game/Characters/Player/Animations/Motions/Running_Slide__3_
-MRUItem9=/Game/Characters/Player/Animations/Motions/Running_Slide__3__Montage
-MRUItem10=/Game/Characters/Player/Animations/Motions/Running_Slide__1__mixamo_com
-MRUItem11=/Game/Characters/Player/Animations/Motions/Neo_Slide
-MRUItem12=/Game/Characters/Player/Animations/Motions/Neo_Slide_Montage
-MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem14=/Game/door2_BP
-MRUItem15=/Game/Door_BP
-MRUItem16=/Game/trip_bp
-MRUItem17=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem18=/Game/Characters/Enemy/Test/Test_enemy
-MRUItem19=/Game/Characters/Player/Animations/Motions/Takedown_A_Player
+MRUItem0=/Game/Blueprints/ziplineend2
+MRUItem1=/Game/Blueprints/ziplineend1
+MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem3=/Game/Blueprints/ziplineend_Cylinder
+MRUItem4=/Game/Blueprints/ziplineend_Cylinder_001
+MRUItem5=/Game/Blueprints/Ziplineactor
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip_Montage
+MRUItem8=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip
+MRUItem9=/Game/Characters/Player/Animations/Motions/Sprinting_Forward_Roll
+MRUItem10=/Game/Characters/Player/Animations/Motions/Neo_Vaulting
+MRUItem11=/Game/Characters/Player/Animations/Motions/Roll_Montage
+MRUItem12=/Game/Characters/Player/Animations/Motions/Neo_Vault
+MRUItem13=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem14=/Game/Characters/Player/Animations/Motions/Running_Slide__3_
+MRUItem15=/Game/Characters/Player/Animations/Motions/Running_Slide__3__Montage
+MRUItem16=/Game/Characters/Player/Animations/Motions/Running_Slide__1__mixamo_com
+MRUItem17=/Game/Characters/Player/Animations/Motions/Neo_Slide
+MRUItem18=/Game/Characters/Player/Animations/Motions/Neo_Slide_Montage
+MRUItem19=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
