--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ GridEnabled=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartition.None,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartition.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSamples.GroupName,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
@@ -237,7 +237,7 @@ PostProcessVolume=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2No
 Test_enemy_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 door2_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
-BP_ThirdPersonGameMode_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
+BP_ThirdPersonGameMode_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 SceneComponent=
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Ziplineactor_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
@@ -254,9 +254,13 @@ UserConstructionScript_3=K2Node_VariableGet.DefaultValueCategory.CharacterMoveme
 EdGraphNode_Comment=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 K2Node_InputKey=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 K2Node_Variable=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+Timer_Widget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+TriggerBox=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+TargetPoint=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 
 [EditorStartup]
-LastLevel=/Game/ob_course_joint_ca_4
+LastLevel=/Game/ob_course_joint_ca_3
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1677,13 +1681,70 @@ Zipline_Actor_C.WorldPartition=True
 Zipline_Actor_C.Events=True
 Zipline_Actor_C.TransformCommon=True
 Zipline_Actor_C.Default=True
+BP_ThirdPersonGameMode_C.Default=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+Timer_Widget_C.Appearance=True
+Timer_Widget_C.Designer=True
+Timer_Widget_C.Input=True
+Timer_Widget_C.Interaction=True
+Timer_Widget_C.Performance=True
+Timer_Widget_C.Layout=True
+Timer_Widget_C.Behavior=True
+Timer_Widget_C.Render Transform=True
+Timer_Widget_C.Localization=True
+Timer_Widget_C.Accessibility=True
+Timer_Widget_C.Clipping=True
+Timer_Widget_C.Navigation=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ob_course_joint_ca_3_C.Tick=True
+ob_course_joint_ca_3_C.Replication=True
+ob_course_joint_ca_3_C.Actor=True
+ob_course_joint_ca_3_C.Input=True
+ob_course_joint_ca_3_C.HLOD=True
+ob_course_joint_ca_3_C.WorldPartition=True
+ob_course_joint_ca_3_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/ZiplineActor.ZiplineActor
-OpenAssetsAtExit=/Game/Blueprints/ziplineend7.ziplineend7
-OpenAssetsAtExit=/Game/Blueprints/Zipline_Interface.Zipline_Interface
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
+OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Timer_Widget.Timer_Widget
+OpenAssetsAtExit=/Game/ob_course_joint_ca_3.ob_course_joint_ca_3:PersistentLevel.ob_course_joint_ca_3
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1717,15 +1778,15 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
 WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 FbxImportUI="\"Object\" "
@@ -1776,9 +1837,9 @@ K2Node_InputKey="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object\" \"Object.CharacterMovement\" "
-Character="\"Object\" \"Object.CharacterMovement\" "
-Pawn="\"Object\" \"Object.CharacterMovement\" "
+BP_ThirdPersonCharacter_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Enemy_ABP_C="\"Object\" "
@@ -1949,6 +2010,21 @@ StaticMeshSocket="\"Object\" "
 SplineMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 EdGraphNode_Comment="\"Object\" "
 SpringArmComponent="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+HorizontalBox="\"Object\" "
+Timer_Widget_C="\"Object\" "
+ParticleSystem="\"Object\" "
+FXSystemAsset="\"Object\" "
+ParticleSpriteEmitter="\"Object\" "
+ParticleEmitter="\"Object\" "
+ParticleModuleSize="\"Object\" \"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object\" \"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModule="\"Object\" \"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleLifetime="\"Object\" \"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object\" \"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleColorOverLife="\"Object\" \"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object\" \"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -2871,8 +2947,8 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/ob_course_joint_ca_4
-MRUItem1=/Game/ob_course_joint_ca_3
+MRUItem0=/Game/ob_course_joint_ca_3
+MRUItem1=/Game/ob_course_joint_ca_4
 MRUItem2=/Game/ob_course_joint_ca
 MRUItem3=/Game/ob_course_joint_ca_2
 
@@ -2897,7 +2973,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Characters/Player/Animations/Motions
+ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3146,29 +3222,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Zipline_Interface
-MRUItem1=/Game/Blueprints/ziplineend7
-MRUItem2=/Game/Blueprints/Ziplineactor
-MRUItem3=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem4=/Game/Blueprints/Zipline_Actor
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem6=/Game/Characters/Player/Animations/Motions/Hanging_Idle
-MRUItem7=/Game/Blueprints/ZiplineInteract_BPI
-MRUItem8=/Game/Blueprints/ziplineend6
-MRUItem9=/Game/Blueprints/Zipline_Interaction_BP
-MRUItem10=/Game/Blueprints/Zipline_BP
-MRUItem11=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem12=/Game/Blueprints/ziplineend2
-MRUItem13=/Game/Blueprints/ziplineend1
-MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem15=/Game/Blueprints/ziplineend_Cylinder
-MRUItem16=/Game/Blueprints/ziplineend_Cylinder_001
-MRUItem17=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip_Montage
-MRUItem18=/Game/Characters/Player/Animations/Motions/Running_Forward_Flip
-MRUItem19=/Game/Characters/Player/Animations/Motions/Sprinting_Forward_Roll
+MRUItem0=/Game/Blueprints/Zipline_Particles
+MRUItem1=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem2=/Game/ThirdPerson/Widgets/Timer_Widget
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem6=/Game/Blueprints/Zipline_Interface
+MRUItem7=/Game/Blueprints/ziplineend7
+MRUItem8=/Game/Blueprints/Ziplineactor
+MRUItem9=/Game/Blueprints/Zipline_Actor
+MRUItem10=/Game/Characters/Player/Animations/Motions/Hanging_Idle
+MRUItem11=/Game/Blueprints/ZiplineInteract_BPI
+MRUItem12=/Game/Blueprints/ziplineend6
+MRUItem13=/Game/Blueprints/Zipline_Interaction_BP
+MRUItem14=/Game/Blueprints/Zipline_BP
+MRUItem15=/Game/Blueprints/ziplineend2
+MRUItem16=/Game/Blueprints/ziplineend1
+MRUItem17=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem18=/Game/Blueprints/ziplineend_Cylinder
+MRUItem19=/Game/Blueprints/ziplineend_Cylinder_001
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -3235,6 +3311,7 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/Blueprints/Zipline_Actor.Zipline_Actor=1
 /Game/Blueprints/ziplineend7.ziplineend7=1
 /Game/Blueprints/Zipline_Interface.Zipline_Interface=1
+/Game/Blueprints/Zipline_Particles.Zipline_Particles=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3294,9 +3371,10 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [DetailMultiObjectNodeExpansion]
-GeneralProjectSettings=True
+GeneralProjectSettings=False
 GameMapsSettings=True
 AssetManagerSettings=True
 AudioSettings=True
@@ -3389,4 +3467,37 @@ MovieRendererName=
 PropertyEditorToolkit_PinAsColumnHeader=24
 Property=0.5
 Value=1
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-45.000000 Y=180.000000 R=0.000000
 
